security/dlp/vs-2.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: default
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - '*'
    options:
      dlp:
        actions:
        - actionType: SSN
        - actionType: ALL_CREDIT_CARDS
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: json-upstream
            namespace: gloo-system
